<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:id="@+id/schedule_rule"
        style="@style/CreateRuleOption">

        <ImageView
            app:srcCompat="@drawable/ic_schedule_rule_black_24dp"
            android:contentDescription="@null"
            style="@style/CreateRuleOptionIcon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/schedule_rule"
                style="@style/CreateRuleOptionTitle"/>

            <TextView
                android:text="@string/schedule_rule_desc"
                android:textAppearance="@style/TextCaption"
                style="@style/CreateRuleOptionDescription"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/calendar_rule"
        style="@style/CreateRuleOption">

        <ImageView
            app:srcCompat="@drawable/ic_calendar_rule_black_24dp"
            android:contentDescription="@null"
            style="@style/CreateRuleOptionIcon"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/calendar_rule"
                style="@style/CreateRuleOptionTitle"/>

            <TextView
                android:text="@string/calendar_rule_desc"
                android:textAppearance="@style/TextCaption"
                style="@style/CreateRuleOptionDescription"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
