<?xml version="1.0" encoding="utf-8"?>

<me.camsteffen.polite.AnimateFrame
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/edit_rule_common" />

            <me.camsteffen.polite.widget.CaptionOption
                android:id="@+id/calendars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/calendars"/>

            <View style="@style/Divider"/>

            <me.camsteffen.polite.widget.CaptionOption
                android:id="@+id/events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/events"/>

            <View style="@style/Divider" />

            <LinearLayout
                android:id="@+id/keywords_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <me.camsteffen.polite.widget.CaptionOption
                    android:id="@+id/inverse"
                    app:label="@string/inverse_match"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View style="@style/Divider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextSubhead"
                    android:padding="16dp"
                    android:text="@string/keywords"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <EditText
                        android:id="@+id/new_keyword"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:hint="@string/add_keyword_hint"
                        android:inputType="text"
                        android:maxLength="20"
                        android:imeActionId="100"
                        android:imeActionLabel="@string/add"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/add_keyword_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/words"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textSize="26sp"
                    android:lineSpacingExtra="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/remove_keywords_tip"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/remove_keyword_hint"
                    android:textStyle="italic"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</me.camsteffen.polite.AnimateFrame>
