<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="handlers"
            type="me.camsteffen.polite.rule.edit.EditScheduleRuleFragment" />
        <variable
            name="model"
            type="me.camsteffen.polite.rule.edit.EditScheduleRuleViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textAppearance="@style/OptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:textColor="?android:textColorPrimary"
            android:text="@string/days"/>
        <LinearLayout
            android:id="@+id/days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center_horizontal">
        </LinearLayout>
        <View style="@style/Divider" />
        <me.camsteffen.polite.view.ValueOption
            android:id="@+id/start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{_ -> handlers.onClickBeginTime()}"
            app:label="@string/start_time"
            app:value="@{model.beginDisplay}"/>
        <View style="@style/Divider" />
        <me.camsteffen.polite.view.ValueOption
            android:id="@+id/end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{_ -> handlers.onClickEndTime()}"
            app:label="@string/end_time"
            app:value="@{model.endDisplay}"/>
        <View style="@style/Divider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">
            <TextView
                android:text="@string/duration"
                android:textSize="16sp"
                android:textColor="?android:textColorSecondary"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/duration"
                tools:text="9h 30m"
                android:text="@{model.durationDisplay}"
                android:textSize="16sp"
                android:textColor="?android:textColorSecondary"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View style="@style/Divider" />
    </LinearLayout>
</layout>
