<?xml version="1.0" encoding="utf-8"?>

<me.camsteffen.polite.AnimateFrame
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/edit_rule_common" />

            <TextView
                android:textAppearance="@style/OptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:textColor="?android:textColorPrimary"
                android:text="@string/days"/>

            <LinearLayout
                android:id="@+id/days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:gravity="center_horizontal">

            </LinearLayout>

            <View style="@style/Divider" />

            <me.camsteffen.polite.widget.ValueOption
                android:id="@+id/start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/start_time"/>

            <View style="@style/Divider" />

            <me.camsteffen.polite.widget.ValueOption
                android:id="@+id/end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/end_time"/>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:text="@string/duration"
                    android:textSize="16sp"
                    android:textColor="?android:textColorSecondary"
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/duration"
                    tools:text="9h 30m"
                    android:textSize="16sp"
                    android:textColor="?android:textColorSecondary"
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <View style="@style/Divider" />

        </LinearLayout>

    </ScrollView>

</me.camsteffen.polite.AnimateFrame>